<resources>
    <string name="please_wait">Please wait</string>
    <string name="no_internet">No internet</string>
    <string name="items">Items</string>
    <string name="about">About</string>
    <string name="application_made_by_algebra_students">NASA (akronim od engl. National Aeronautics and Space Administration) je državna civilna uprava SAD-a za zrakoplovna i svemirska istraživanja i razvoj, sa sjedištem u Washingtonu. Osnovana je 29. srpnja 1958. odlukom američkog predsjednika D. Eisenhowera. Naslijedila je državnu upravu za zrakoplovstvo NACA (eng. National Advisory Committee for Aeronautics), osnovanu 1915. Od svojih početaka NASA je vodila američke programe svemirskih istraživanja, od prvih američkih letova s ljudskom posadom (program Mercury; program Gemini) do leta ljudi na Mjesec (program Apollo) i misija raketoplana Space Shuttle. NASA je također predvodila istraživanja u komunikacijama (Telstar), meteorologiji, geologiji te drugim miroljubivim primjenama zemljinih umjetnih satelita. Bespilotne međuplanetarne letjelice brojnih NASA-inih programa (na primjer iz programa Mariner i programa Voyager) dale su obilje podataka o Sunčevu sustavu.</string>
    <string name="exit">Exit</string>
    <string name="really">Really?</string>
    <string name="cancel">Cancel</string>
    <string name="map">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="sure">Are you sure?</string>
    <string name="explanation">Explanation</string>
    <string name="app_name">NASA</string>
    <string name="sol">Sol:</string>
    <string name="rover">Rover:</string>
    <string name="picture_of_the_day">Picture of the Day:</string>
    <string name="search">Search</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="mars_photo">Mars Photo</string>
    <string name="mars_sol">Mars Sol:</string>
    <string name="earth_date">Earth Date:</string>
    <string name="mars_rover">Mars Rover:</string>
    <string name="camera">Camera:</string>
    <string name="landing_date">Landing Date:</string>
    <string name="launch_date">Launch Date:</string>
    <string name="status">Status:</string>
    <string name="author">Author:</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="title1">Title:</string>
    <string name="date">Date:</string>
    <string name="search_mars_photo">Search Mars Photos</string>
    <string name="choose_date">Choose Date</string>
    <string name="choose_rover">Choose Rover</string>
    <string name="choose_camera">Choose Camera</string>
    <string name="date_type">Date Type:</string>
    <string name="mars_soll">Mars Sol</string>
    <string name="earth_datee">Earth Date</string>
    <string name="write_here">Write here</string>
    <string name="hide">Hide</string>
    <string name="curiosity">Curiosity</string>
    <string name="opportunity">Opportunity</string>
    <string name="spirit">Spirit</string>
    <string name="fhaz">FHAZ</string>
    <string name="rhaz">RHAZ</string>
    <string name="mast">MAST</string>
    <string name="chemcam">CHEMCAM</string>
    <string name="mahli">MAHLI</string>
    <string name="mardi">MARDI</string>
    <string name="navcam">NAVCAM</string>
    <string name="pancam">PANCAM</string>
    <string name="minites">MINITES</string>
    <string name="choose_rover_firstly">Choose Rover Firstly</string>
    <string name="new_mars_photos">New Mars Photos:</string>
    <string name="nasa">Nasa</string>
    <string name="favorite_photos">Favorite Photos:</string>
    <string name="refresh">Refresh</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="load_more">Load More</string>
    <string name="incorrect_date_mars_sol">Incorrect date: Mars sol is in 0–1000</string>
    <string name="incorrect_date_earth_date">Incorrect date: dd.mm.yyyy must be</string>
    <string name="choose_date_firstly">Choose Date firstly</string>
    <string name="choose_camera_firstly">Choose Camera firstly</string>
    <string name="select_date">Select Date</string>
    <string name="mars">Mars</string>
</resources>