<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/paddingItems"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivItem"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ivHeight"
            tools:src="@drawable/space_background"/>

        <LinearLayout
            android:layout_marginTop="@dimen/marginTopDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textStyle="bold"
                android:textColor="@android:color/holo_red_dark"
                android:text="@string/date"/>

            <ImageView
                android:id="@+id/ivRead"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:src="@drawable/red_flag"/>

        </LinearLayout>


        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="yyyy-MM-dd" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_dark"
            android:text="@string/title"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_dark"
            android:text="@string/explanation"/>

        <TextView
            android:id="@+id/tvExplanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/lorem/random" />


    </LinearLayout>

</ScrollView>