<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/menuItems"
    android:id="@+id/fragments">


    <fragment
        android:id="@+id/menuItems"
        android:name="com.example.nasa_mars_api_service.ItemsFragment"
        android:label="@string/items"
        tools:layout="@layout/fragment_items"/>

    <fragment
        android:id="@+id/menuAbout"
        android:name="com.example.nasa_mars_api_service.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about"/>


    <fragment
        android:id="@+id/menuMaps"
        android:name="com.example.nasa_mars_api_service.MapsFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_maps2"/>



    <fragment
        android:id="@+id/mainListFragment"
        android:name="com.example.nasa_mars_api_service.ui.fragment.main_list.MainListFragment"
        android:label="@string/mars"
        tools:layout="@layout/fragment_main_list">
        <action
            android:id="@+id/action_mainListFragment_to_searchMarsPhotoFragment"
            app:destination="@id/searchMarsPhotoFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_close_exit"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/mainListFragment"/>
        <action
            android:id="@+id/action_mainListFragment_to_imageOfDayFragment"
            app:destination="@id/imageOfDayFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_close_exit"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/mainListFragment"/>
        <action
            android:id="@+id/action_mainListFragment_to_marsPhotoDescriptionFragment"
            app:destination="@id/marsPhotoDescriptionFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_close_exit"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/mainListFragment"/>
        <action
            android:id="@+id/action_mainListFragment_to_photoViewFragment"
            app:destination="@id/photoViewFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_close_exit"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/mainListFragment"/>

    </fragment>

    <fragment
        android:id="@+id/imageOfDayFragment"
        android:name="com.example.nasa_mars_api_service.ui.fragment.image_of_day_description.ImageOfDayFragment"
        android:label="ImageOfDayFragment" >
        <action
            android:id="@+id/action_imageOfDayFragment_to_photoViewFragment"
            app:destination="@id/photoViewFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_close_exit"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/imageOfDayFragment"/>
        <argument
            android:name="id"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/marsPhotoDescriptionFragment"
        android:name="com.example.nasa_mars_api_service.ui.fragment.mars_photo_description.MarsPhotoDescriptionFragment"
        android:label="MarsPhotoDescriptionFragment">
        <action
            android:id="@+id/action_marsPhotoDescriptionFragment_to_photoViewFragment"
            app:destination="@id/photoViewFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_close_exit"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/marsPhotoDescriptionFragment"/>
        <argument
            android:name="id"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/photoViewFragment"
        android:name="com.example.nasa_mars_api_service.ui.fragment.photo_view.PhotoViewFragment"
        android:label="PhotoViewFragment" >
        <argument
            android:name="id"
            app:argType="integer" />
        <argument
            android:name="PhotoType"
            app:argType="com.example.nasa_mars_api_service.core.enums.PhotoTypes"
            android:defaultValue="MARS_PHOTO" />
    </fragment>
    <fragment
        android:id="@+id/searchMarsPhotoFragment"
        android:name="com.example.nasa_mars_api_service.ui.fragment.search.SearchMarsPhotoFragment"
        android:label="SearchMarsPhotoFragment" >
        <action
            android:id="@+id/action_searchMarsPhotoFragment_to_searchListFragment"
            app:destination="@id/searchListFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_close_exit"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/searchMarsPhotoFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/searchListFragment"
        android:name="com.example.nasa_mars_api_service.ui.fragment.search_list.SearchListFragment"
        android:label="SearchListFragment" >
        <action
            android:id="@+id/action_searchListFragment_to_marsPhotoDescriptionFragment"
            app:destination="@id/marsPhotoDescriptionFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_close_exit"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/searchListFragment"/>
        <action
            android:id="@+id/action_searchListFragment_to_photoViewFragment"
            app:destination="@id/photoViewFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_close_exit"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/searchListFragment"/>
        <argument
            android:name="MarsPhotoToSearch"
            app:argType="com.example.nasa_mars_api_service.core.models.MarsPhotoToSearch" />
    </fragment>

</navigation>